--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>project zero</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div class="main">
     <div class="main-form">
       <div class="input">
-        <h2>Enter you data</h2>
+        
       <form action="#" id="fform">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" for="fname"><br>
